# rust-kanji-rand

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-release.yml  rust.yml
artifacts/: config.json
src/: main.rs
