[package]
name = "rust-kanji-rand"
version = "1.0.0"
authors = ["Henke Adolfsson <catears13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
rand = "0.7"
serde_json = "1.0"
dirs = "2.0"
